@@ -1,6 +1,6 @@
 {
   "name": "simp-sudo",
-  "version": "5.9.0",
+  "version": "5.9.1",
   "author": "SIMP Team",
   "summary": "Manage sudo",
   "license": "Apache-2.0",
